src/test/deca/syntax/invalid/missing_semicolon.deca
// Resultats :
// Erreur contextuelle
// Ligne 2 : point-virgule manquant

int x = 10
int y = 20;
